<resources>
    <string name="channel_name">default channel</string>
    <string name="channel_description">default channel</string>
    <string name="app_name">Light Church</string>
    <string name="title_home">홈</string>
    <string name="title_column">목회칼럼</string>
    <string name="title_sermon">주일 설교</string>
    <string name="title_meditation">날마다빛으로</string>
    <string name="title_notifications">큰빛소식</string>
    <string name="lkpc_church">LKPC Church</string>
    <string name="list_item_title">List item title</string>
    <string name="loading_image">Loading image</string>
    <string name="back_button">Back button</string>
    <string name="note">Note</string>
    <string name="pre_registration">예배 사전 등록 안내</string>
    <string name="see_detail">자세히 보기</string>
    <string name="online_service">큰빛 온라인 예배</string>
    <string name="youtube_live_image">YouTube Live Image</string>
    <string name="online_donate">온라인 헌금</string>
    <string name="giving_icon">Giving icon</string>
    <string name="homepage">홈페이지</string>
    <string name="youtube_channel_guide">큰빛 YouTube 채널 안내</string>
    <string name="lpc">큰빛교회</string>
    <string name="toronto_lpc">토론토 큰빛교회</string>
    <string name="channel_image">Channel image</string>
    <string name="edu">교육부</string>
    <string name="pre_registration_banner">Pre-registration banner</string>
    <string name="youtube_play_button">Youtube play button</string>
    <string name="new_hope">뉴호프</string>
    <string name="sermon_thumbnail">Sermon thumbnail</string>
    <string name="empty_note_1">저장된 노트가 없습니다</string>
    <string name="empty_note_2">목회 컬럼, 주일 설교, 날마다 빛으로 메뉴에서\n우측 상단의 노트 버튼을 눌러\n노트를 작성해주세요</string>
    <string name="empty_note_image">Empty note image</string>
    <string name="top_note_button">Top note button</string>
    <string name="my_notes">My노트</string>
    <string name="selected">selected</string>
    <string name="title_activity_note_edit">NoteEditActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="save">저장</string>
    <string name="note_icon">Note icon</string>
    <string name="open_note">노트 보기</string>
    <string name="label_for_title">Label for title</string>
    <string name="title">Title</string>
    <string name="label_for_content">Label for content</string>
    <string name="edit">편집</string>
    <string name="new_note">노트 작성</string>
    <string name="qr_code_generator">QR Code generator</string>
    <string name="generate_qr_code">QR Code 생성</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="name">이름</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_gen_title">QR Code 생성</string>
    <string name="qr_code_scan_title">QR Code Scanner</string>
    <string name="qr_code_scanner_btn">Qr Code Scanner Btn</string>
    <string name="delete">삭제</string>
    <string name="share">공유</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more">더 보기</string>
    <string name="church_events">교회 행사</string>
    <string name="online_meet">온라인 심방 신청</string>
    <string name="downtown_news">다운타운 소식</string>
    <string name="service_info">예배 안내</string>
    <string name="navigation">오시는 길</string>
    <string name="lpc_live">큰빛 LIVE</string>
    <string name="live_worship">Live Worship</string>
    <string name="lpc_youtube_channels_kr">큰빛 유튜브 채널</string>
    <string name="lpc_youtube_channels">Youtube Channels</string>
    <string name="newcomer_reg_kr">새교우 가등록</string>
    <string name="newcomer_reg">Newcomer Registration</string>
    <string name="bulletin_kr">주보</string>
    <string name="bulletin">Bulletin</string>
    <string name="downtown_bulletin_kr">다운타운 주보</string>
    <string name="worship_pre_reg_kr">예배 사전 등록</string>
    <string name="worship_pre_reg">Worship Pre-registration</string>
    <string name="online_offering_kr">온라인 헌금</string>
    <string name="online_offering">Online Offering</string>
    <string name="data_warning">와이파이가 아닌 모바일 데이터 이용 시\n 별도의 데이터 통화료가 발생할 수 있습니다.</string>
    <string name="banner_title">공지 사항</string>

    <!-- notifications -->
    <string name="notification_channel_name">default notification</string>
    <string name="notification_channel_description">default notification description</string>
    <string name="no_data_kr">데이터가 존재하지 않습니다</string>
    <string name="cell_church">가정교회</string>
    <string name="fellow_news">교우 동정</string>
    <string name="settings">환경 설정</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>