<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_mode_note_share"
        android:icon="@drawable/ic_church"
        android:title="@string/title_home" />

    <item
        android:id="@+id/action_mode_note_delete"
        android:icon="@drawable/ic_column"
        android:title="@string/title_column" />

    <item
        android:id="@+id/navigation_sermon"
        android:icon="@drawable/ic_sermon"
        android:title="@string/title_sermon" />

    <item
        android:id="@+id/navigation_meditation"
        android:icon="@drawable/ic_meditation"
        android:title="@string/title_meditation"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_menu"
        android:checkable="false"
        android:title="@string/more" />

</menu>