<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.note.NoteEditActivity">

    <include layout="@layout/title_area" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_area"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/label_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/note_title"
            android:contentDescription="@string/label_for_title"
            android:text="@string/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Title"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="text"
            android:singleLine="true"
            tools:layout_editor_absoluteX="21dp"
            app:layout_constraintTop_toBottomOf="@+id/label_note_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/label_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/note_content"
            android:contentDescription="@string/label_for_content"
            android:text="@string/note"
            app:layout_constraintTop_toBottomOf="@id/note_title"
            app:layout_constraintStart_toStartOf="parent"
            />

        <EditText
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Note"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLines="20"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_note_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>